# cptoymc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configs/: Bd2Dpi_SignalOnly_config.info  Bd2JpsiKS_dirtyconfig.info  Bd2JpsiKS_example.info  Bd2JpsiKS_prodasym.info
main/: CMakeLists.txt  DoToyGenMain.cpp  HelloMain.cpp  P2VV_Generator.cpp  TaggingComboTest.cpp
scripts/: rebuild_cmake.sh
src/: CMakeLists.txt  Configuration.cpp  Configuration.h  Generator.cpp  Generator.h
src/configuration/: CompConfig.cpp  CompConfig.h  ObsConfig.cpp  ObsConfig.h  ToyConfig.cpp  ToyConfig.h  configuration.cpp  configuration.h
src/generator/: BSig_CPV_P2VP_Generator.cpp  BSig_CPV_P2VP_Generator.h  BSig_CPV_twoFinal_Generator.cpp  BSig_CPV_twoFinal_Generator.h  Bkg_2Final_Generator.cpp  Bkg_2Final_Generator.h  CompGenerator.cpp  CompGenerator.h  CompGeneratorFactory.cpp  CompGeneratorFactory.h  LLBkg_Generator.cpp  LLBkg_Generator.h  Observables.cpp  Observables.h  P2VV_Generator.cpp  ToyGenerator.cpp  ToyGenerator.h  generator.cpp  generator.h  masspdf.cpp  masspdf.h
tests/: CMakeLists.txt  ComboSignalTest.cpp  ComboTest.cpp  FormulaVarGenerationComboTest.cpp  OSSignalTest.cpp  OSTest.cpp  SelfGenerationComboTest.cpp  SignalTest.cpp  SpecialComboTest.cpp  TaggingComboTest.cpp
